--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
         "type": "git",
         "url": "https://github.com/yourusername/n8n-nodes-json-sanitizer.git"
     },
-   "scripts": {
-		"build": "n8n-node build",
-		"build:watch": "tsc --watch",
-		"dev": "n8n-node dev",
-		"lint": "n8n-node lint",
-		"lint:fix": "n8n-node lint --fix",
-		"test": "jest",
-		"release": "n8n-node release",
-		"prepublishOnly": "n8n-node prerelease"
-	},
+    "scripts": {
+        "build": "n8n-node build",
+        "build:watch": "tsc --watch",
+        "dev": "n8n-node dev",
+        "lint": "n8n-node lint",
+        "lint:fix": "n8n-node lint --fix",
+        "test": "jest",
+        "release": "n8n-node release",
+        "prepublishOnly": "n8n-node prerelease"
+    },
     "files": [
         "dist"
     ],
@@ -38,13 +38,13 @@
     },
     "devDependencies": {
         "@n8n/node-cli": "*",
+        "@types/jest": "^29.5.12",
         "eslint": "9.32.0",
+        "jest": "^29.7.0",
         "prettier": "3.6.2",
         "release-it": "^19.0.4",
-        "typescript": "5.9.2",
-        "jest": "^29.7.0",
         "ts-jest": "^29.1.2",
-        "@types/jest": "^29.5.12"
+        "typescript": "5.9.2"
     },
     "peerDependencies": {
         "n8n-workflow": "*"
@@ -52,10 +52,16 @@
     "jest": {
         "preset": "ts-jest",
         "testEnvironment": "node",
-        "testMatch": ["**/__tests__/**/*.test.ts", "**/?(*.)+(spec|test).ts"],
+        "testMatch": [
+            "**/__tests__/**/*.test.ts",
+            "**/?(*.)+(spec|test).ts"
+        ],
         "collectCoverageFrom": [
             "nodes/**/*.ts",
             "!nodes/**/*.node.ts"
         ]
+    },
+    "dependencies": {
+        "jsonrepair": "^3.13.1"
     }
 }
