Add .npmignore and update package metadata
Added .npmignore to exclude development and unnecessary files from npm package. Updated .gitignore to ignore package-lock.json. Enhanced package.json with new keywords, homepage, bugs URL, and updated repository URL. Changed prepublishOnly script to build and test before publishing, and bumped version to 0.1.1.

Co-Authored-By: Fateme Banihashem <205870715+fabanihashem@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
     "name": "n8n-nodes-json-sanitizer",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "n8n community node for JSON sanitization and normalization",
     "license": "MIT",
-    "homepage": "",
+    "homepage": "https://github.com/devwithmj/n8n-nodes-json-sanitizer#readme",
+    "bugs": {
+        "url": "https://github.com/devwithmj/n8n-nodes-json-sanitizer/issues"
+    },
     "keywords": [
-        "n8n-community-node-package"
+        "n8n-community-node-package",
+        "n8n",
+        "json",
+        "sanitizer",
+        "normalization",
+        "repair",
+        "automation",
+        "workflow"
     ],
     "author": {
         "name": "Majid Alahverdi",
@@ -13,7 +23,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/devwithmj/n8n-nodes-json-sanitizer.git"
+        "url": "git+https://github.com/devwithmj/n8n-nodes-json-sanitizer.git"
     },
     "scripts": {
         "build": "n8n-node build",
@@ -23,7 +33,7 @@
         "lint:fix": "n8n-node lint --fix",
         "test": "jest",
         "release": "n8n-node release",
-        "prepublishOnly": "n8n-node prerelease"
+        "prepublishOnly": "npm run build && npm test"
     },
     "files": [
         "dist"
@@ -60,8 +70,5 @@
             "nodes/**/*.ts",
             "!nodes/**/*.node.ts"
         ]
-    },
-    "dependencies": {
-        "jsonrepair": "^3.13.1"
     }
 }
